Rename template name "pageheader" to "pageheading"

--- a/oneliners/templates/404.html
+++ b/oneliners/templates/404.html
@@ -2,7 +2,7 @@
 
 {% block pagetitle %}Not found{% endblock %}
 
-{% block pageheader %}<h1>Not found</h1>{% endblock %}
+{% block pageheading %}<h1>Not found</h1>{% endblock %}
 
 {% block content %}
 
