--- a/oneliners/templates/500.html
+++ b/oneliners/templates/500.html
@@ -2,7 +2,7 @@
 
 {% block pagetitle %}Oops, something went wrong...{% endblock %}
 
-{% block pageheader %}<h1>Oops, something went wrong...</h1>{% endblock %}
+{% block pageheading %}<h1>Oops, something went wrong...</h1>{% endblock %}
 
 {% block content %}
 
