--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -89,7 +89,7 @@
 
 {% block main %}
 
-    {% block pageheader %}{% endblock %}
+    {% block pageheading %}{% endblock %}
 
     {% block content %}{% endblock %}
 
