--- a/oneliners/templates/oneliners/help/markdown.html
+++ b/oneliners/templates/oneliners/help/markdown.html
@@ -3,7 +3,7 @@
 {% load markup %}
 
 {% block pagetitle %}Markdown Help{% endblock %}
-{% block pageheader %}<h1>Markdown Help</h1>{% endblock %}
+{% block pageheading %}<h1>Markdown Help</h1>{% endblock %}
 
 {% block content %}
 
