--- a/oneliners/templates/oneliners/pages/feeds.html
+++ b/oneliners/templates/oneliners/pages/feeds.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pagetitle %}Feeds{% endblock %}
-{% block pageheader %}<h1>Feeds</h1>{% endblock %}
+{% block pageheading %}<h1>Feeds</h1>{% endblock %}
 
 {% block content %}
 
