--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -20,7 +20,7 @@ You can login with common social logins such as Google and GitHub and share your
 This is an open-source project, built with love, Django, Python, jQuery, Git, GitHub, HTML5, Bootstrap from Twitter.
 {% endblock %}
 
-{% block pageheader %}
+{% block pageheading %}
 <h1>
     bashoneliners.com
     {% if SERVER_NAME != 'www.bashoneliners.com' %}
