--- a/oneliners/templates/oneliners/pages/oneliner.html
+++ b/oneliners/templates/oneliners/pages/oneliner.html
@@ -2,7 +2,7 @@
 
 {% block pagetitle %}{{ oneliner.summary|capfirst }}{% endblock %}
 
-{% block pageheader %}{% endblock %}
+{% block pageheading %}{% endblock %}
 
 {% block content %}
 
