--- a/oneliners/templates/oneliners/pages/oneliner_edit.html
+++ b/oneliners/templates/oneliners/pages/oneliner_edit.html
@@ -2,7 +2,7 @@
 
 {% block pagetitle %}{{ form.title }}{% endblock %}
 
-{% block pageheader %}<h1>{{ form.title }}</h1>{% endblock %}
+{% block pageheading %}<h1>{{ form.title }}</h1>{% endblock %}
 
 {% block keywords %}{% endblock %}
 
