--- a/oneliners/templates/oneliners/pages/search.html
+++ b/oneliners/templates/oneliners/pages/search.html
@@ -2,7 +2,7 @@
 
 {% block pagetitle %}Search{% endblock %}
 
-{% block pageheader %}{% endblock %}
+{% block pageheading %}{% endblock %}
 
 {% block content %}
 <div class="card">
