Upgrade jquery to 3.7.1

--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -54,8 +54,9 @@
     <!-- MDB -->
     <script type="text/javascript" src="{% static 'mdb/js/mdb.min.js' %}"></script>
     <!-- Custom scripts -->
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript">window.jQuery || document.write('<script src="{% static 'js/jquery-1.7.1.min.js' %}"><\/script>')</script>    <script type="text/javascript" src="{% static 'js/django-jquery-csrf.js' %}"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script type="text/javascript">window.jQuery || document.write('<script src="{% static 'js/jquery-3.7.1.min.js' %}"><\/script>')</script>
+    <script type="text/javascript" src="{% static 'js/django-jquery-csrf.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/showdown.js' %}"></script>
     <script type="text/javascript" src="{% static 'upvotejs/upvotejs.vanilla.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bashoneliners.js' %}"></script>
