Use "elided" range in pagination, to avoid scaling issues with the number of oneliners

--- a/oneliners/templates/oneliners/elements/oneliners_page.html
+++ b/oneliners/templates/oneliners/elements/oneliners_page.html
@@ -14,6 +14,6 @@
     {% endfor %}
 </div>
 
-{% with oneliners_page as page %}
+{% with page=oneliners_page page_range=oneliners_page_range %}
     {% include 'oneliners/elements/pagination.html' %}
 {% endwith %}
