--- a/oneliners/templates/oneliners/elements/pagination.html
+++ b/oneliners/templates/oneliners/elements/pagination.html
@@ -1,8 +1,8 @@
 {% if page.paginator.num_pages > 1 %}
     <nav>
         <ul class="pagination pagination-lg justify-content-center">
-            {% for num in page.paginator.page_range %}
-                <li class="page-item {% if num == page.number %}active{% endif %}">
+            {% for num in page_range %}
+                <li class="page-item {% if num == page.number %}active{% endif %} {% if num == page.paginator.ELLIPSIS %}disabled{% endif %}">
                     <a class="page-link" href="?page={{ num }}">{{ num }}</a>
                 </li>
             {% endfor %}
