Add rel="noopener noreferrer" to markdown help link

--- a/oneliners/templates/oneliners/elements/oneliner_edit_form.html
+++ b/oneliners/templates/oneliners/elements/oneliner_edit_form.html
@@ -35,7 +35,7 @@
             Mention if there are important trade-offs or common pitfalls.
             Sometimes it's useful to include example inputs and outputs.
             Use appropriate
-            <a class="help help-markdown" href="{% url 'help_markdown' %}" target="_blank">markdown</a>
+            <a class="help help-markdown" href="{% url 'help_markdown' %}" target="_blank" rel="noopener noreferrer">markdown</a>
             for code text, code blocks, or blockquotes.
             Do not use HTML.
         </div>
