Upgrade showdownjs to 2.1

--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -20,12 +20,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
     />
     <!-- MDB -->
-    <link rel="stylesheet" href="{% static 'mdb/css/mdb.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/mdb-fixes.css' %}">
+    <link rel="stylesheet" href="{% static 'mdb/css/mdb.min.css' %}?v=1" />
+    <link rel="stylesheet" href="{% static 'css/mdb-fixes.css' %}?v=1" />
 
     <!-- bashoneliners -->
-    <link rel="stylesheet" href="{% static 'upvotejs/upvotejs.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bashoneliners.css' %}">
+    <link rel="stylesheet" href="{% static 'upvotejs/upvotejs.css' %}?v=1" />
+    <link rel="stylesheet" href="{% static 'css/bashoneliners.css' %}?v=1" />
 
     <meta name="description" content="{% block description %}{% endblock %}">
     <meta name="author" content="Janos Gyerik info@bashoneliners.com">
@@ -52,14 +52,14 @@
 </footer>
 
     <!-- MDB -->
-    <script type="text/javascript" src="{% static 'mdb/js/mdb.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'mdb/js/mdb.min.js' %}?v=1"></script>
     <!-- Custom scripts -->
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script type="text/javascript">window.jQuery || document.write('<script src="{% static 'js/jquery-3.7.1.min.js' %}"><\/script>')</script>
-    <script type="text/javascript" src="{% static 'js/django-jquery-csrf.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/showdown.js' %}"></script>
-    <script type="text/javascript" src="{% static 'upvotejs/upvotejs.vanilla.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bashoneliners.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/django-jquery-csrf.js' %}?v=1"></script>
+    <script type="text/javascript" src="{% static 'showdownjs/showdown.min.js' %}?v=1"></script>
+    <script type="text/javascript" src="{% static 'upvotejs/upvotejs.vanilla.js' %}?v=1"></script>
+    <script type="text/javascript" src="{% static 'js/bashoneliners.js' %}?v=1"></script>
     <script type="text/javascript">
         <!--
         var App = window.App = {};
