Rename Tags tab to Commands

--- a/oneliners/templates/oneliners/elements/oneliners_tabs.html
+++ b/oneliners/templates/oneliners/elements/oneliners_tabs.html
@@ -9,6 +9,6 @@
         <a class="nav-link {{ active_popular }}" href="{% url 'oneliners_popular' %}" role="tab" data-ordering="popular">Popular</a>
     </li>
     <li class="nav-item" role="presentation">
-        <a class="nav-link {{ active_tags }}" href="{% url 'oneliners_tags' %}" role="tab" data-ordering="popular">Tags</a>
+        <a class="nav-link {{ active_tags }}" href="{% url 'oneliners_tags' %}" role="tab" data-ordering="popular">Commands</a>
     </li>
 </ul>
