--- a/oneliners/templates/oneliners/pages/feeds.html
+++ b/oneliners/templates/oneliners/pages/feeds.html
@@ -7,8 +7,8 @@
 
 <p>Use your favourite RSS aggregator to stay in touch with the latest commands.</p>
 
-<dl class="rss">
-    <dt><a href="{% url 'latest_oneliners' %}"><span class="label label-info">RSS</span> Recently posted Bash One-Liners</a></dt>
-</dl>
+<ul>
+    <li><a href="{% url 'latest_oneliners' %}">Recently posted Bash One-Liners</a></li>
+</ul>
 
 {% endblock %}
