--- a/oneliners/templates/oneliners/elements/oneliner_edit_form.html
+++ b/oneliners/templates/oneliners/elements/oneliner_edit_form.html
@@ -70,12 +70,11 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="input">
             {% for action in form.actions %}
-                <button class="btn {{ action.cssclass }}" type="submit" name="action" value="{{ action.name }}">
-                    {{ action.name }}</button>
+                <input class="d-block d-md-inline-block btn {{ action.cssclass }}" type="submit" name="action" value="{{ action.name }}" />
             {% endfor %}
-            <a class="btn btn-default" href="{{ cancel_url }}">Cancel</a>
+            <a class="d-block d-md-inline-block btn btn-default" href="{{ cancel_url }}">Cancel</a>
         </div>
     </div>
 </form>
