--- a/oneliners/templates/oneliners/pages/oneliner.html
+++ b/oneliners/templates/oneliners/pages/oneliner.html
@@ -2,6 +2,8 @@
 
 {% block pagetitle %}{{ oneliner.summary|capfirst }}{% endblock %}
 
+{% block description %}{{ oneliner.line }}{% endblock %}
+
 {% block pageheading %}{% endblock %}
 
 {% block content %}
