Change title on index page

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block pagetitle %}bashoneliners.com{% endblock %}
+{% block pagetitle %}Bash One-Liners{% endblock %}
 
 {% block keywords %}bash, ksh, shell, script, one-liner, oneliner, tips, tricks, snippets, linux, unix, vote,
     open-source, django, python, git, github{% endblock %}
