--- a/oneliners/templates/oneliners/feeds/oneliners.html
+++ b/oneliners/templates/oneliners/feeds/oneliners.html
@@ -5,7 +5,7 @@
     <p>
         <small>
             &mdash; by {{ oneliner.user.hackerprofile.get_display_name }}
-            on {{ oneliner.created_dt }}
+            on {{ oneliner.published_dt }}
         </small>
     </p>
 
